--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
   display: flex;
   flex-direction: column;
-  background: rgba(105, 100, 100, 0.5);
+  background: #272727;
   align-items: center;
   gap: 2vmin;
   font-size: 3vmin;
@@ -17,32 +17,48 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.title{
+  color: #ff652f;
+}
+.liItem {
+  color: #e9e5dd;
+}
+a{color: #14a76c}
+#titleNews{
+  color: #ff0000;
+}
 .article {
   width: 80%;
   height: 20vmax;
-  border: 1px solid #333;
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;
   margin-top: 3vmin;
-  border-radius: 15px;
-  background: #81c2b2;
-  color: #333;
+  
+  color: #747474;
   padding: 1vmax;
   flex-wrap: wrap;
 }
+
 .article-title{
     font-weight: 900;
+    color: #e0dcb0;
+    font-size:2vmax
 }
 .movie {
   width: 20vmax;
   height: 20vmax;
   border: 1px solid #333;
   padding: 2vmin;
-  background: #81c2b2;
-  color: #e9e5dd;
+  color: #747474;
   border-radius: 5px;
   overflow-y: scroll;
   overflow-x: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+.movie-title{
+  font-weight: 900;
+  color:#e0dcb0
 }
 .movie::-webkit-scrollbar {
   display: none;
@@ -112,6 +128,6 @@ a{
   }
   .article-img {
     position: absolute;
-    z-index: -1;
+    display: none;
   }
 }
